--- a/mid-project/package.json
+++ b/mid-project/package.json
@@ -11,14 +11,15 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "effector": "^21.2.2",
-    "effector-react": "^21.0.4",
+    "effector": "^21.5.0",
+    "effector-react": "^21.0.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "^3.9.7",
+    "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
