--- a/mid-project/package.json
+++ b/mid-project/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^10.4.8",
     "@testing-library/user-event": "^12.1.1",
     "@types/jest": "^26.0.9",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -15,6 +16,7 @@
     "effector-react": "^21.0.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.9.5",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
