--- a/mid-project/package.json
+++ b/mid-project/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "effector": "^21.5.0",
     "effector-react": "^21.0.6",
+    "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hook-form": "^6.9.5",
@@ -22,7 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
