--- a/mid-project/package.json
+++ b/mid-project/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "effector": "^21.5.0",
     "effector-react": "^21.0.6",
     "node-sass": "^4.14.1",
@@ -21,7 +23,7 @@
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
@@ -50,5 +52,9 @@
   "devDependencies": {
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.6"
+  },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
+    "**/@typescript-eslint/parser": "^4.1.1"
   }
 }
