--- a/mid-project/.prettierrc
+++ b/mid-project/.prettierrc
@@ -1,7 +1,15 @@
 {
-  "printWidth": 100,
+  "printWidth": 80,
   "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "newline-before-return": true,
+  "no-duplicate-variable": [true, "check-parameters"],
+  "no-var-keyword": true,
+  "quoteProps": "as-needed",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
+
