--- a/mid-project/package.json
+++ b/mid-project/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -60,8 +61,9 @@
   "devDependencies": {
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "4.0.0",
-    "@typescript-eslint/parser": "4.0.0",
+    "@types/webpack-env": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-config-react-app": "6.0.0",
     "eslint-plugin-flowtype": "5.2.0",
@@ -69,7 +71,7 @@
     "eslint-plugin-jest": "24.0.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4.0.8",
     "eslint-plugin-testing-library": "3.9.0",
     "prettier": "^2.2.1",
