--- a/mid-project/package.json
+++ b/mid-project/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4.0.8",
     "eslint-plugin-testing-library": "3.9.0",
+    "miragejs": "^0.1.41",
     "prettier": "^2.2.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
